documentacion/obtenida/ARINC 429/driver and software/PC629-1/API/P61W32VB.BAS

Public Declare Function DRV629_PortLodsB Lib "P61W32.DLL" Alias "_DRV629_PortLodsB@12" (ByVal addrval As Integer, ByVal cntval As Long, ByVal handleval As Long) As Integer
Public Declare Function DRV629_PortLodsW Lib "P61W32.DLL" Alias "_DRV629_PortLodsW@12" (ByVal addrval As Integer, ByVal cntval As Long, ByVal handleval As Long) As Integer
Public Declare Function DRV629_PortOutB Lib "P61W32.DLL" Alias "_DRV629_PortOutB@12" (ByVal addrval As Integer, ByVal dataval As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_PortOutsB Lib "P61W32.DLL" Alias "_DRV629_PortOutsB@16" (ByVal addrval As Integer, ByRef dataptr As Long, ByVal cntval As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_PortOutsW Lib "P61W32.DLL" Alias "_DRV629_PortOutsW@16" (ByVal addrval As Integer, ByRef dataptr As Long, ByVal cntval As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_PortOutW Lib "P61W32.DLL" Alias "_DRV629_PortOutW@12" (ByVal addrval As Integer, ByVal dataval As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_PortStepB Lib "P61W32.DLL" Alias "_DRV629_PortStepB@20" (ByVal addrval As Integer, ByVal dataval As Integer, ByVal cntval As Long, ByVal stepval As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_PortStosB Lib "P61W32.DLL" Alias "_DRV629_PortStosB@16" (ByVal addrval As Integer, ByVal dataval As Integer, ByVal cntval As Long, ByVal handleval As Long) As Long
Public Declare Function DRV629_PortStosBR Lib "P61W32.DLL" Alias "_DRV629_PortStosBR@12" (ByVal addrval As Integer, ByVal cntval As Long, ByVal handleval As Long) As Long
Public Declare Function DRV629_PortStosW Lib "P61W32.DLL" Alias "_DRV629_PortStosW@16" (ByVal addrval As Integer, ByVal dataval As Integer, ByVal cntval As Long, ByVal handleval As Long) As Long
Public Declare Function DRV629_PromFill Lib "P61W32.DLL" Alias "_DRV629_PromFill@16" (ByVal addrval As Long, ByVal value As Integer, ByVal cntval As Long, ByVal handleval As Long) As Long
Public Declare Function DRV629_PromFillR Lib "P61W32.DLL" Alias "_DRV629_PromFillR@12" (ByVal addrval As Long, ByVal cntval As Long, ByVal handleval As Long) As Long
Public Declare Function DRV629_PromFillStep Lib "P61W32.DLL" Alias "_DRV629_PromFillStep@20" (ByVal addrval As Long, ByVal value As Integer, ByVal cntval As Long, ByVal stepval As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_PromIns Lib "P61W32.DLL" Alias "_DRV629_PromIns@16" (ByVal addrval As Long, ByRef dataptr As Long, ByVal cntval As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_PromLoc Lib "P61W32.DLL" Alias "_DRV629_PromLoc@8" (ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function DRV629_PromLod Lib "P61W32.DLL" Alias "_DRV629_PromLod@8" (ByVal cntval As Long, ByVal handleval As Long) As Integer
Public Declare Function DRV629_PromOffsetFill Lib "P61W32.DLL" Alias "_DRV629_PromOffsetFill@8" (ByVal value As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_PromOuts Lib "P61W32.DLL" Alias "_DRV629_PromOuts@16" (ByVal addrval As Long, ByRef dataptr As Long, ByVal cntval As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_PromRdB Lib "P61W32.DLL" Alias "_DRV629_PromRdB@8" (ByVal addrval As Long, ByVal handleval As Long) As Integer
Public Declare Function DRV629_PromRdL Lib "P61W32.DLL" Alias "_DRV629_PromRdL@8" (ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function DRV629_PromRdW Lib "P61W32.DLL" Alias "_DRV629_PromRdW@8" (ByVal addrval As Long, ByVal handleval As Long) As Integer
Public Declare Function DRV629_PromStep Lib "P61W32.DLL" Alias "_DRV629_PromStep@16" (ByVal value As Integer, ByVal cntval As Long, ByVal stepval As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_PromSto Lib "P61W32.DLL" Alias "_DRV629_PromSto@12" (ByVal value As Integer, ByVal cntval As Long, ByVal handleval As Long) As Long
Public Declare Function DRV629_PromStoR Lib "P61W32.DLL" Alias "_DRV629_PromStoR@8" (ByVal cntval As Long, ByVal handleval As Long) As Long
Public Declare Function DRV629_PromWrB Lib "P61W32.DLL" Alias "_DRV629_PromWrB@12" (ByVal addrval As Long, ByVal value As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_PromWrL Lib "P61W32.DLL" Alias "_DRV629_PromWrL@12" (ByVal addrval As Long, ByVal value As Long, ByVal handleval As Long) As Long
Public Declare Function DRV629_PromWrW Lib "P61W32.DLL" Alias "_DRV629_PromWrW@12" (ByVal addrval As Long, ByVal value As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_RamBlkAddr Lib "P61W32.DLL" Alias "_DRV629_RamBlkAddr@8" (ByVal blknum As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_RamBlkCnt Lib "P61W32.DLL" Alias "_DRV629_RamBlkCnt@8" (ByVal blkcnt As Integer, ByVal handleval As Long) As Integer
Public Declare Function DRV629_RamBlkCount Lib "P61W32.DLL" Alias "_DRV629_RamBlkCount@4" (ByVal handleval As Long) As Integer
Public Declare Function DRV629_RamBlkCurr Lib "P61W32.DLL" Alias "_DRV629_RamBlkCurr@4" (ByVal handleval As Long) As Integer
Public Declare Function DRV629_RamBlkFill Lib "P61W32.DLL" Alias "_DRV629_RamBlkFill@20" (ByVal blkval As Integer, ByVal startaddr As Long, ByVal count As Long, ByVal value As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_RamBlkSize Lib "P61W32.DLL" Alias "_DRV629_RamBlkSize@4" (ByVal handleval As Long) As Long
Public Declare Function DRV629_RamFill Lib "P61W32.DLL" Alias "_DRV629_RamFill@16" (ByVal addrval As Long, ByVal value As Integer, ByVal cntval As Long, ByVal handleval As Long) As Long
Public Declare Function DRV629_RamFillR Lib "P61W32.DLL" Alias "_DRV629_RamFillR@12" (ByVal addrval As Long, ByVal cntval As Long, ByVal handleval As Long) As Long
Public Declare Function DRV629_RamLods Lib "P61W32.DLL" Alias "_DRV629_RamLods@16" (ByVal addrval As Long, ByRef dataptr As Byte, ByVal cntval As Long, ByVal handleval As Long) As Long
Public Declare Function DRV629_RamPageCrc Lib "P61W32.DLL" Alias "_DRV629_RamPageCrc@8" (ByVal pageval As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_RamRdB Lib "P61W32.DLL" Alias "_DRV629_RamRdB@8" (ByVal addrval As Long, ByVal handleval As Long) As Integer
Public Declare Function DRV629_RamRdL Lib "P61W32.DLL" Alias "_DRV629_RamRdL@8" (ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function DRV629_RamRdW Lib "P61W32.DLL" Alias "_DRV629_RamRdW@8" (ByVal addrval As Long, ByVal handleval As Long) As Integer
Public Declare Function DRV629_RamStos Lib "P61W32.DLL" Alias "_DRV629_RamStos@16" (ByVal addrval As Long, ByRef dataptr As Byte, ByVal cntval As Long, ByVal handleval As Long) As Long
Public Declare Function DRV629_RamSwitch Lib "P61W32.DLL" Alias "_DRV629_RamSwitch@8" (ByVal blknum As Integer, ByVal handleval As Long) As Integer
Public Declare Function DRV629_RamWrB Lib "P61W32.DLL" Alias "_DRV629_RamWrB@12" (ByVal addrval As Long, ByVal value As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_RamWrL Lib "P61W32.DLL" Alias "_DRV629_RamWrL@12" (ByVal addrval As Long, ByVal value As Long, ByVal handleval As Long) As Long
Public Declare Function DRV629_RamWrW Lib "P61W32.DLL" Alias "_DRV629_RamWrW@12" (ByVal addrval As Long, ByVal value As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_Rand Lib "P61W32.DLL" Alias "_DRV629_Rand@0" () As Integer
Public Declare Function DRV629_RegInsProm Lib "P61W32.DLL" Alias "_DRV629_RegInsProm@12" (ByRef dataptr As Long, ByVal cntval As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_RegLodPort Lib "P61W32.DLL" Alias "_DRV629_RegLodPort@8" (ByVal cntval As Long, ByVal handleval As Long) As Integer
Public Declare Function DRV629_RegOutsProm Lib "P61W32.DLL" Alias "_DRV629_RegOutsProm@12" (ByRef dataptr As Long, ByVal cntval As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_RegRdCtrl Lib "P61W32.DLL" Alias "_DRV629_RegRdCtrl@4" (ByVal handleval As Long) As Integer
Public Declare Function DRV629_RegRdDir Lib "P61W32.DLL" Alias "_DRV629_RegRdDir@8" (ByVal regnum As Integer, ByVal handleval As Long) As Integer
Public Declare Function DRV629_RegRdErr Lib "P61W32.DLL" Alias "_DRV629_RegRdErr@4" (ByVal handleval As Long) As Integer
Public Declare Function DRV629_RegRdInd Lib "P61W32.DLL" Alias "_DRV629_RegRdInd@8" (ByVal regnum As Integer, ByVal handleval As Long) As Integer
Public Declare Function DRV629_RegRdIntVect Lib "P61W32.DLL" Alias "_DRV629_RegRdIntVect@4" (ByVal handleval As Long) As Integer
Public Declare Function DRV629_RegRdLast Lib "P61W32.DLL" Alias "_DRV629_RegRdLast@4" (ByVal handleval As Long) As Integer
Public Declare Function DRV629_RegRdMemCfg Lib "P61W32.DLL" Alias "_DRV629_RegRdMemCfg@4" (ByVal handleval As Long) As Integer
Public Declare Function DRV629_RegRdMemPage Lib "P61W32.DLL" Alias "_DRV629_RegRdMemPage@4" (ByVal handleval As Long) As Integer
Public Declare Function DRV629_RegRdPort Lib "P61W32.DLL" Alias "_DRV629_RegRdPort@4" (ByVal handleval As Long) As Integer
Public Declare Function DRV629_RegRdPortSel Lib "P61W32.DLL" Alias "_DRV629_RegRdPortSel@4" (ByVal handleval As Long) As Integer
Public Declare Function DRV629_RegRdProm Lib "P61W32.DLL" Alias "_DRV629_RegRdProm@8" (ByVal cntval As Long, ByVal handleval As Long) As Integer
Public Declare Function DRV629_RegRdStatus Lib "P61W32.DLL" Alias "_DRV629_RegRdStatus@4" (ByVal handleval As Long) As Integer
Public Declare Function DRV629_RegStepPort Lib "P61W32.DLL" Alias "_DRV629_RegStepPort@16" (ByVal value As Integer, ByVal cntval As Long, ByVal stepval As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_RegStepProm Lib "P61W32.DLL" Alias "_DRV629_RegStepProm@16" (ByVal value As Integer, ByVal cntval As Long, ByVal stepval As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_RegStoPort Lib "P61W32.DLL" Alias "_DRV629_RegStoPort@12" (ByVal value As Integer, ByVal cntval As Long, ByVal handleval As Long) As Long
Public Declare Function DRV629_RegStoRPort Lib "P61W32.DLL" Alias "_DRV629_RegStoRPort@8" (ByVal cntval As Long, ByVal handleval As Long) As Long
Public Declare Function DRV629_RegWrCID Lib "P61W32.DLL" Alias "_DRV629_RegWrCID@8" (ByVal value As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_RegWrClrInt Lib "P61W32.DLL" Alias "_DRV629_RegWrClrInt@4" (ByVal handleval As Long) As Long
Public Declare Function DRV629_RegWrCtrl Lib "P61W32.DLL" Alias "_DRV629_RegWrCtrl@8" (ByVal value As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_RegWrDir Lib "P61W32.DLL" Alias "_DRV629_RegWrDir@12" (ByVal regnum As Integer, ByVal value As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_RegWrInd Lib "P61W32.DLL" Alias "_DRV629_RegWrInd@12" (ByVal regnum As Integer, ByVal value As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_RegWrMemCfg Lib "P61W32.DLL" Alias "_DRV629_RegWrMemCfg@8" (ByVal value As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_RegWrMemPage Lib "P61W32.DLL" Alias "_DRV629_RegWrMemPage@8" (ByVal value As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_RegWrPort Lib "P61W32.DLL" Alias "_DRV629_RegWrPort@8" (ByVal value As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_RegWrPortSel Lib "P61W32.DLL" Alias "_DRV629_RegWrPortSel@8" (ByVal value As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_RegWrProm Lib "P61W32.DLL" Alias "_DRV629_RegWrProm@12" (ByVal value As Integer, ByVal cntval As Long, ByVal handleval As Long) As Long
